Fixing nav item padding + alignemnt for education component

--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -80,7 +80,7 @@
 .navbar .img-container .avatar {
     border-radius: 50%;
     height: 9em;
-    box-shadow: 0px 4px 6px 2px lightgrey;
+    box-shadow: 0 4px 6px 2px lightgrey;
 }
 
 .navbar .title {
